Fix layout bug Two html classes with the same name

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 .wrapper {
     display: grid;
     grid-template-columns: 1.5fr 8fr;
+    grid-template-rows: 1fr 1fr 5fr;
     gap: 5px;
 }
 
@@ -17,6 +18,7 @@
     grid-column: 1;
     display: grid;
     grid-template-columns: minmax(250px, 300px);
+    grid-row: 1 / 4;
 }
 
 svg {
@@ -84,15 +86,16 @@ svg {
 
 .panel {
     grid-column: 2;
+    grid-row: 1 / 5;
     background-color: aqua;
     display: grid;
 }
 
 .nav-bar {
     grid-column: 1;
+    grid-row: 1;
     background-color: aqua;
     display: grid;
-    grid-template-rows: 1fr 1fr;
 }
 
 .navbar-content {
@@ -131,12 +134,9 @@ img {
     height: 75px;
 }
 
-
 .user-content {
-    grid-column: 1;
-    background-color: lightgreen;
     display: grid;
-    grid-template-columns: 1fr 5fr 1fr 1fr 1fr;
+    grid-template-columns: .5fr 2fr 0.5fr .5fr .5fr;
 }
 .user-content div {
     align-self: center;
@@ -152,4 +152,33 @@ img {
     background-color: rgb(67, 208, 254);
     color: white;
     font-size: 17px;
+}
+
+.user-feed {
+    grid-column: 1;
+    grid-row: 2 / 5;
+    background-color: lightgreen;
+    display: grid;
+    grid-template-columns: 2fr 2fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+}
+
+.your-projects {
+    grid-column: 1 / 3;
+    grid-row: 1 / 5;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    margin: 20px;
+}
+.card {
+    background-color: white;
+}
+
+.announcements {
+    grid-row: 1 / 3;
+}
+
+.trending {
+    grid-row: 3 / 5;
 }
